--- a/.ipynb
+++ b/.ipynb
@@ -201,7 +201,8 @@
     "print(df['population'].astype(str).str.isnumeric().value_counts())\n",
     "print(df['yearly_growth'].astype(str).str.isnumeric().value_counts())\n",
     "print(df['yearly_growth_percentage'].astype(str).str.isnumeric().value_counts())\n",
-    "print(df['pop_density_km2'].astype(str).str.isnumeric().value_counts())"
+    "print(df['pop_density_km2'].astype(str).str.isnumeric().value_counts())\n",
+    "# Hi"
    ]
   },
   {
