--- a/.ipynb
+++ b/.ipynb
@@ -206,27 +206,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>population</th>\n",
+       "      <th>yearly_growth_percentage</th>\n",
+       "      <th>yearly_growth</th>\n",
+       "      <th>pop_density_km2</th>\n",
+       "      <th>urban_population</th>\n",
+       "      <th>urban_population_percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>2584034261</td>\n",
+       "      <td>0.0188</td>\n",
+       "      <td>47603112</td>\n",
+       "      <td>17</td>\n",
+       "      <td>775067697</td>\n",
+       "      <td>30%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1952</td>\n",
+       "      <td>2630861562</td>\n",
+       "      <td>0.0181</td>\n",
+       "      <td>46827301</td>\n",
+       "      <td>18</td>\n",
+       "      <td>799282533</td>\n",
+       "      <td>30%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1953</td>\n",
+       "      <td>2677608960</td>\n",
+       "      <td>0.0178</td>\n",
+       "      <td>46747398</td>\n",
+       "      <td>18</td>\n",
+       "      <td>824289989</td>\n",
+       "      <td>31%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1954</td>\n",
+       "      <td>2724846741</td>\n",
+       "      <td>0.0176</td>\n",
+       "      <td>47237781</td>\n",
+       "      <td>18</td>\n",
+       "      <td>850179106</td>\n",
+       "      <td>31%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1955</td>\n",
+       "      <td>2773019936</td>\n",
+       "      <td>0.0177</td>\n",
+       "      <td>48173195</td>\n",
+       "      <td>19</td>\n",
+       "      <td>877008842</td>\n",
+       "      <td>32%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>7464022000</td>\n",
+       "      <td>0.0114</td>\n",
+       "      <td>84225000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4060653000</td>\n",
+       "      <td>54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>7547859000</td>\n",
+       "      <td>0.0112</td>\n",
+       "      <td>83837000</td>\n",
+       "      <td>51</td>\n",
+       "      <td>4140189000</td>\n",
+       "      <td>55%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>7631091000</td>\n",
+       "      <td>0.0110</td>\n",
+       "      <td>83232000</td>\n",
+       "      <td>51</td>\n",
+       "      <td>4219817000</td>\n",
+       "      <td>55%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>7713468000</td>\n",
+       "      <td>0.0108</td>\n",
+       "      <td>82377000</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4299439000</td>\n",
+       "      <td>56%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>7795000000</td>\n",
+       "      <td>0.0105</td>\n",
+       "      <td>81331000</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4378900000</td>\n",
+       "      <td>56%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0     1.88\n",
-       "1     1.81\n",
-       "2     1.78\n",
-       "3     1.76\n",
-       "4     1.77\n",
-       "      ... \n",
-       "65    1.14\n",
-       "66    1.12\n",
-       "67    1.10\n",
-       "68    1.08\n",
-       "69    1.05\n",
-       "Name: yearly_growth_percentage, Length: 70, dtype: object"
+       "    year  population  yearly_growth_percentage  yearly_growth  \\\n",
+       "0   1951  2584034261                    0.0188       47603112   \n",
+       "1   1952  2630861562                    0.0181       46827301   \n",
+       "2   1953  2677608960                    0.0178       46747398   \n",
+       "3   1954  2724846741                    0.0176       47237781   \n",
+       "4   1955  2773019936                    0.0177       48173195   \n",
+       "..   ...         ...                       ...            ...   \n",
+       "65  2016  7464022000                    0.0114       84225000   \n",
+       "66  2017  7547859000                    0.0112       83837000   \n",
+       "67  2018  7631091000                    0.0110       83232000   \n",
+       "68  2019  7713468000                    0.0108       82377000   \n",
+       "69  2020  7795000000                    0.0105       81331000   \n",
+       "\n",
+       "    pop_density_km2  urban_population urban_population_percentage  \n",
+       "0                17         775067697                         30%  \n",
+       "1                18         799282533                         30%  \n",
+       "2                18         824289989                         31%  \n",
+       "3                18         850179106                         31%  \n",
+       "4                19         877008842                         32%  \n",
+       "..              ...               ...                         ...  \n",
+       "65               50        4060653000                         54%  \n",
+       "66               51        4140189000                         55%  \n",
+       "67               51        4219817000                         55%  \n",
+       "68               52        4299439000                         56%  \n",
+       "69               52        4378900000                         56%  \n",
+       "\n",
+       "[70 rows x 7 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,8 +393,9 @@
    "source": [
     "#remove \"%\" to make it number\n",
     "def removePercentage(d):\n",
-    "      return d[:-1]\n",
-    "df['yearly_growth_percentage'].apply(removePercentage)"
+    "      return float(d[:-1])/100\n",
+    "df['yearly_growth_percentage']= df['yearly_growth_percentage'].apply(removePercentage)\n",
+    "df"
    ]
   }
  ],
