convert to number

--- a/.ipynb
+++ b/.ipynb
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "#remove \"%\" to make it number\n",
+    "#remove \"%\" to make convert to number\n",
     "def removePercentage(d):\n",
     "      return float(d[:-1])/100\n",
     "df['yearly_growth_percentage']= df['yearly_growth_percentage'].apply(removePercentage)\n",
