--- a/.ipynb
+++ b/.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -85,6 +85,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1955</td>\n",
+       "      <td>2773019936</td>\n",
+       "      <td>1.77%</td>\n",
+       "      <td>48173195</td>\n",
+       "      <td>19</td>\n",
+       "      <td>877008842</td>\n",
+       "      <td>32%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>3700437046</td>\n",
+       "      <td>2.06%</td>\n",
+       "      <td>74756419</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1354215496</td>\n",
+       "      <td>37%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1977</td>\n",
+       "      <td>4229506060</td>\n",
+       "      <td>1.80%</td>\n",
+       "      <td>74839196</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1616419308</td>\n",
+       "      <td>38%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1954</td>\n",
        "      <td>2724846741</td>\n",
@@ -95,44 +125,14 @@
        "      <td>31%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>2006</td>\n",
-       "      <td>6623518000</td>\n",
-       "      <td>1.25%</td>\n",
-       "      <td>81611000</td>\n",
-       "      <td>44</td>\n",
-       "      <td>3289446000</td>\n",
-       "      <td>50%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>6789089000</td>\n",
-       "      <td>1.24%</td>\n",
-       "      <td>83142000</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3439719000</td>\n",
-       "      <td>50%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>1991</td>\n",
-       "      <td>5414289444</td>\n",
-       "      <td>1.63%</td>\n",
-       "      <td>87058383</td>\n",
-       "      <td>36</td>\n",
-       "      <td>2347462336</td>\n",
-       "      <td>43%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>1994</td>\n",
-       "      <td>5663150427</td>\n",
-       "      <td>1.46%</td>\n",
-       "      <td>81552881</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2518254111</td>\n",
-       "      <td>44%</td>\n",
+       "      <th>11</th>\n",
+       "      <td>1962</td>\n",
+       "      <td>3150420795</td>\n",
+       "      <td>1.89%</td>\n",
+       "      <td>58577288</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1088376703</td>\n",
+       "      <td>35%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,21 +140,21 @@
       ],
       "text/plain": [
        "    year  population yearly_growth_percentage  yearly_growth  pop_density_km2  \\\n",
+       "4   1955  2773019936                    1.77%       48173195               19   \n",
+       "19  1970  3700437046                    2.06%       74756419               25   \n",
+       "26  1977  4229506060                    1.80%       74839196               28   \n",
        "3   1954  2724846741                    1.76%       47237781               18   \n",
-       "55  2006  6623518000                    1.25%       81611000               44   \n",
-       "57  2008  6789089000                    1.24%       83142000               46   \n",
-       "40  1991  5414289444                    1.63%       87058383               36   \n",
-       "43  1994  5663150427                    1.46%       81552881               38   \n",
+       "11  1962  3150420795                    1.89%       58577288               21   \n",
        "\n",
        "    urban_population urban_population_percentage  \n",
+       "4          877008842                         32%  \n",
+       "19        1354215496                         37%  \n",
+       "26        1616419308                         38%  \n",
        "3          850179106                         31%  \n",
-       "55        3289446000                         50%  \n",
-       "57        3439719000                         50%  \n",
-       "40        2347462336                         43%  \n",
-       "43        2518254111                         44%  "
+       "11        1088376703                         35%  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "[70 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,6 +398,42 @@
     "df['yearly_growth_percentage']= df['yearly_growth_percentage'].apply(removePercentage)\n",
     "df"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Descriptive Analytic"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict Analytic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
