--- a/.ipynb
+++ b/.ipynb
@@ -413,6 +413,38 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Year Population\n",
+    "plt.figure(figsize=(16, 8), dpi=300)\n",
+    "plt.plot(df['year'], df['population'])\n",
+    "plt.title(\"population growth\")\n",
+    "# Setting the X and Y labels\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Population')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yearly_growth_percentage\n",
+    "plt.figure(figsize=(16, 10), dpi=400)\n",
+    "plt.plot(df['yearly_growth_percentage'], df['population'])\n",
+    "plt.title(\"population growth\")\n",
+    "# Setting the X and Y labels\n",
+    "plt.xlabel('yearly_growth_percentage')\n",
+    "plt.ylabel('Population')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -438,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -452,12 +484,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4bd93d3e2369d766c292c7e8ea7d09dce32c9fd58b032bc2b1ce8b9b4c153d23"
+    "hash": "3b541f02185d68d783835a007381082c9f8b1f1afccf82000b5548bf1e719158"
    }
   }
  },
