--- a/.ipynb
+++ b/.ipynb
@@ -552,7 +552,6 @@
     }
    ],
    "source": [
-    "\n",
     "#yearly_growth_percentage\n",
     "plt.figure(figsize=(16, 10), dpi=400)\n",
     "plt.plot(df['year'],df['yearly_growth_percentage'])\n",
@@ -612,28 +611,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[8.48383794e+09]])"
+       "8014378356"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yp = df[['year','population']]\n",
-    "yp\n",
-    "x = yp.iloc[:, 0].values.reshape(-1, 1)\n",
-    "y = yp.iloc[:, 1].values.reshape(-1, 1)\n",
+    "# Transform year and population as a 2D array \n",
+    "# which is required to use in LinearRegression\n",
+    "x = yp.iloc[:, 0].values.reshape(-1, 1)#year\n",
+    "y = yp.iloc[:, 1].values.reshape(-1, 1)#population\n",
     "model = LinearRegression().fit(x, y)\n",
     "predict_population = model.predict([[2024]])\n",
-    "y_pred"
+    "round(predict_population[0][0])"
    ]
   },
   {
